--- a/package.json
+++ b/package.json
@@ -1,49 +1,18 @@
 {
-  "name": "cmsrtl",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.3",
-    "moment-jalaali": "^0.10.1",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
-    "react-date-object": "^2.1.8",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "react-modern-calendar-datepicker": "^3.1.6",
-    "react-multi-date-picker": "^4.5.2",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "rechart": "^0.0.1",
-    "recharts": "^2.12.7",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "SabzLearn Shop Cms",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
   }
 }
